[package]
name = "accessrs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders", "datepicker"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
chrono = "0.4"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
